--- a/src/app/wireguard-monitoring/wireguard-monitoring.component.html
+++ b/src/app/wireguard-monitoring/wireguard-monitoring.component.html
@@ -1,26 +1,29 @@
-<div class="mat-elevation-z2">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator #paginator
-      [length]="dataSource.data.length"
-      [pageIndex]="0"
-      [pageSize]="10"
-      [pageSizeOptions]="[5, 10, 20]"
-      aria-label="Select page">
-  </mat-paginator>
-</div>
+<p>Local Time: {{ localTime }}</p>
+<table>
+  <thead>
+  <tr>
+    <th>#</th>
+    <th>Client Name</th>
+    <th>IP:Port</th>
+    <th>Last Ping</th>
+    <th>TX (MB)</th>
+    <th>RX (MB)</th>
+    <th>IPs</th>
+  </tr>
+  </thead>
+  <tbody>
+    @for (data of (datas$ | async); track data.client; let i = $index) {
+      <tr>
+        <td>{{ i + 1 }}</td>
+        <td>{{ data.client }}</td>
+        <td>{{ data.stat.endpoint }}</td>
+        <td>{{ data.stat.latestHandshake ? convertIsoToDate(data.stat.latestHandshake) : null }}</td>
+        <td>{{ data.stat.transferTx / 1024 / 1024 | number }}</td>
+        <td>{{ data.stat.transferRx / 1024 / 1024 | number }}</td>
+        <td>{{ data.stat.allowedIps.join(", ") }}</td>
+      </tr>
+    }
+  <tr>
+  </tr>
+  </tbody>
+</table>
